# ci-truth-serum

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  README.md  cosmic-ray.toml  package.json  pyproject.toml  setup.sh  stryker.config.json
.claude/hooks/: lib-checks.sh  pre-push-check.sh  safe-launch.sh  session-setup.sh
.hooks/: commit-msg  lint-skills.sh  pre-commit
changelog.d/: README.md  always-reporter-wrapper.fixed.md  check-claude-model.added.md  check-required-reporter.added.md  check-tier-aggregates.added.md  exit-suppression-multiline.fixed.md  pinned-base-images-fix.added.md  release-machinery.added.md  sync-required-checks.added.md
hooks/: __init__.py  _linecheck.py  check_always_reporter.py  check_claude_model.py  check_concurrency.py  check_exit_suppression.py  check_global_stdio_swap.py  check_inline_run_length.py  check_pinned_base_images.py  check_pinned_downloads.py  check_pr_paths.py  check_required_reporter.py  check_stderr_suppression.py  check_symlinks.sh  check_workflow_pipefail.py  run_tier.py  sync_required_checks.py
scripts/: assemble-changelog.test.mjs
tests/: _helpers.py  conftest.py  test_check_always_reporter.py  test_check_concurrency.py  test_check_exit_suppression.py  test_check_global_stdio_swap.py  test_check_inline_run_length.py  test_check_pinned_base_images.py  test_check_pinned_downloads.py  test_check_pr_paths.py  test_check_stderr_suppression.py  test_check_symlinks.py  test_check_unnamed_regex_groups.py  test_check_workflow_pipefail.py  test_linecheck.py
(+37 files in other folders)
